@@ -153,6 +153,12 @@ specifier|protected
 name|QueryBuilderFactory
 name|queryFactory
 decl_stmt|;
+DECL|field|spanFactory
+specifier|final
+specifier|protected
+name|SpanQueryBuilderFactory
+name|spanFactory
+decl_stmt|;
 comment|/**    * Construct an XML parser that uses a single instance QueryParser for handling    * UserQuery tags - all parse operations are synchronised on this parser    *    * @param parser A QueryParser which will be synchronized on during parse calls.    */
 DECL|method|CoreParser
 specifier|public
@@ -227,6 +233,12 @@ name|queryFactory
 operator|=
 operator|new
 name|QueryBuilderFactory
+argument_list|()
+expr_stmt|;
+name|spanFactory
+operator|=
+operator|new
+name|SpanQueryBuilderFactory
 argument_list|()
 expr_stmt|;
 name|queryFactory
@@ -375,23 +387,16 @@ name|queryFactory
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|SpanQueryBuilderFactory
-name|sqof
-init|=
-operator|new
-name|SpanQueryBuilderFactory
-argument_list|()
-decl_stmt|;
 name|SpanNearBuilder
 name|snb
 init|=
 operator|new
 name|SpanNearBuilder
 argument_list|(
-name|sqof
+name|spanFactory
 argument_list|)
 decl_stmt|;
-name|sqof
+name|spanFactory
 operator|.
 name|addBuilder
 argument_list|(
@@ -416,7 +421,7 @@ operator|new
 name|BoostingTermBuilder
 argument_list|()
 decl_stmt|;
-name|sqof
+name|spanFactory
 operator|.
 name|addBuilder
 argument_list|(
@@ -441,7 +446,7 @@ operator|new
 name|SpanTermBuilder
 argument_list|()
 decl_stmt|;
-name|sqof
+name|spanFactory
 operator|.
 name|addBuilder
 argument_list|(
@@ -465,10 +470,10 @@ init|=
 operator|new
 name|SpanOrBuilder
 argument_list|(
-name|sqof
+name|spanFactory
 argument_list|)
 decl_stmt|;
-name|sqof
+name|spanFactory
 operator|.
 name|addBuilder
 argument_list|(
@@ -495,7 +500,7 @@ argument_list|(
 name|analyzer
 argument_list|)
 decl_stmt|;
-name|sqof
+name|spanFactory
 operator|.
 name|addBuilder
 argument_list|(
@@ -519,10 +524,10 @@ init|=
 operator|new
 name|SpanFirstBuilder
 argument_list|(
-name|sqof
+name|spanFactory
 argument_list|)
 decl_stmt|;
-name|sqof
+name|spanFactory
 operator|.
 name|addBuilder
 argument_list|(
@@ -546,10 +551,10 @@ init|=
 operator|new
 name|SpanNotBuilder
 argument_list|(
-name|sqof
+name|spanFactory
 argument_list|)
 decl_stmt|;
-name|sqof
+name|spanFactory
 operator|.
 name|addBuilder
 argument_list|(
@@ -605,6 +610,28 @@ name|builder
 parameter_list|)
 block|{
 name|queryFactory
+operator|.
+name|addBuilder
+argument_list|(
+name|nodeName
+argument_list|,
+name|builder
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|addSpanBuilder
+specifier|public
+name|void
+name|addSpanBuilder
+parameter_list|(
+name|String
+name|nodeName
+parameter_list|,
+name|SpanQueryBuilder
+name|builder
+parameter_list|)
+block|{
+name|spanFactory
 operator|.
 name|addBuilder
 argument_list|(
